# opencv3-for-faces-with-dlib

./: .gitignore  README.MD
classes01/cpp/: CMakeLists.txt  Compile.md  closing.cpp  connectedComponentAnalysis.cpp  cropAndResize.cpp  datatypeConversion.cpp  dilate.cpp  erode.cpp  getAffine.cpp  highguiKeyboard.cpp  highguiMouse.cpp  homography_book.cpp  imageDraw.cpp  opening.cpp  perspectiveCorrection.cpp  readAndDisplayVideo.cpp  readWriteDisplay.cpp  rotate.cpp  thresholding.cpp  trackbar.cpp  virtualBillboard.cpp  writeVideo.cpp
classes01/python/: closing.py  connectedComponentAnalysis.py  cropAndResize.py  datatypeConversion.py  dilate.py  erode.py  getAffine.py  highguiKeyboard.py  highguiMouse.py  homography_book.py  imageDraw.py  opening.py  perspectiveCorrection.py  readAndDisplayVideo.py  readWriteDisplay.py  rotate.py  thresholding.py  trackbar.py  utils.py  virtualBillboard.py  writeVideo.py
classes02/cpp/: CMakeLists.txt  desaturation.cpp  hueHistogram.cpp
classes02/python/: desaturation.py  hueHistogram.py
classes03/: README.MD
classes03/cpp/: CMakeLists.txt  FacialLandmarkDetector.cpp  drawLandmarks.hpp  fastWebcamFLD.cpp  renderFace.hpp  trainFLD.cpp  webcamStabilizedFLD.cpp
classes03/python/: createTrainTestXml.py  drawRectLandmarks.py  faceMorph.py  facialLandmarkDetector.py  renderFace.py  trainFLD.py  webcamFLD.py  webcamHeadPose.py  webcamStabilizedFLD.py
classes04/cpp/: CMakeLists.txt  README.MD  alphaBlend.cpp  blinkDetect.cpp  bugeyeVideo.cpp  delaunay.cpp  delaunayAnimation.cpp  faceAveraging.cpp  faceBlendCommon.hpp  faceMorph.cpp  warpTriangle.cpp  webcamHeadPose.cpp
classes04/python/: alphaBlend.py  blinkDetect.py  buyeyeVideo.py  delaunay.py  delaunayAnimation.py  faceAveraging.py  faceBlendCommon.py  faceMorph.py  warpTriangle.py  webcamHeadPose.py
classes05/cpp/: CMakeLists.txt  aging.cpp  beardImage.cpp  beardVideo.cpp  clone.cpp  faceBlendCommon.hpp  faceswapImage.cpp  faceswapVideo.cpp  fatifyImage.cpp  fatifyVideo.cpp  happifyImage.cpp  happifyVideo.cpp  mls.hpp  mls30.hpp
classes05/data/images/: beard1.png.txt
classes05/python/: .gitignore  clone.py  colorCorrection.py  faceBlendCommon.py  faceswapImage.py  faceswapVideo.py
